[package]
name = "llm_rs"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Unified API for LLM providers"
homepage = "https://github.com/Endi1/llm.rs"
repository = "https://github.com/Endi1/llm.rs"
readme = "README.md"
keywords = ["llm", "ai"]

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"]}
serde = "1.0.219"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"]}
